# D2DCTool

./: .gitignore  Cargo.toml  D2DCTool.sln  README.md  hash_dictionary.txt  tags.txt  unknown_hashes.txt
D2DCTool/: App.axaml  App.axaml.cs  ArchiveManager.cs  D2DCTool.csproj  FileTreeNode.cs  HashScanner.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  TextureConverter.cs  XmlConverter.cs
python/: extract_hashes.py  hash_cracker.py  keep_only_txt_xml.py  keep_only_xml.py  scan_binary_xml_hashes.py
src/: dds_converter.rs  dv2_archive.rs  hash_scanner.rs  main.rs  pak_tree.rs  xml_converter.rs
temp/: extract_hashes.py  hash_cracker.py  keep_only_txt_xml.py  keep_only_xml.py  scan_binary_xml_hashes.py
ui/: app.slint
xml_hashes/: hash_dictionary.txt  unknown_hashes.txt
